--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@
         <title>Document</title>
     </head>
     <body>
-        <input type="file" id="file" />
+<!--         <input type="file" id="file" /> -->
+        <img width="100%" height="100%" src="https://th.bing.com/th/id/R.ed3df8fbc2348ba7c0096dfd1e6b3303?rik=tGgez1TXizgAnA&riu=http%3a%2f%2fwx4.sinaimg.cn%2flarge%2f006APoFYly8gqjowwepspj308c02smx4.jpg&ehk=MROVeDQ8e5e3%2fDmrkrED2HYUJD%2fi5HaqY4k2qTnH5rc%3d&risl=&pid=ImgRaw&r=0" alt="">
         <script>
-            file.onchange = function (e) {
-                const file = e.target.files[0],
-                    chunks = [],
-                    max = 1024 * 1024 * 100;
-                console.log(file);
-                let index = 0;
-                while (index * max <= file.size) {
-                    chunks.push({
-                        file: file.slice(index * max, (index + 1) * max),
-                        filename: file.name.split('.')[0] + index
-                    });
-                    index++;
-                }
-                console.log(chunks);
-            };
+            // file.onchange = function (e) {
+            //     const file = e.target.files[0],
+            //         chunks = [],
+            //         max = 1024 * 1024 * 100;
+            //     console.log(file);
+            //     let index = 0;
+            //     while (index * max <= file.size) {
+            //         chunks.push({
+            //             file: file.slice(index * max, (index + 1) * max),
+            //             filename: file.name.split('.')[0] + index
+            //         });
+            //         index++;
+            //     }
+            //     console.log(chunks);
+            // };
         </script>
     </body>
 </html>
